# yanami

./: .gitignore  Cargo.toml  README.md  dockerfile  rust-toolchain.toml
anna/: Cargo.toml
anna/src/: lib.rs
anna/src/anime/: anime.rs  tracker.rs
anna/src/bgm/: bangumi.rs  bgm.rs  mod.rs
anna/src/qbit/: mod.rs  qbit.rs  qbitorrent.rs
anna/src/rss/: client.rs  rss.rs
anna/src/tmdb/: client.rs  tmdb.rs
common/: Cargo.toml
common/src/: auth.rs  errors.rs  lib.rs  result.rs
model/: Cargo.toml
model/src/: anime.rs  rss.rs  rule.rs  torrent.rs  user.rs
orm/: Cargo.toml
orm/entity/: Cargo.toml
orm/entity/src/: anime.rs  anime_record.rs  config.rs  lib.rs  register_code.rs  rss.rs  rule.rs  user.rs
orm/src/: lib.rs  migration.rs  sea_orm.rs  sqlx.rs
provider/: Cargo.toml
provider/src/: db.rs
src/: config.rs  lib.rs  main.rs  openapi.rs  route.rs
src/common/: auth.rs  errors.rs  result.rs
src/hander/: anime.rs  config.rs  mod.rs  path.rs  rss.rs  rule.rs  user.rs
src/handler/: anime.rs  config.rs  mod.rs  rss.rs  rule.rs  user.rs
src/models/: anime.rs  config.rs  mod.rs  path.rs  rss.rs  rule.rs  user.rs
src/provider/: mod.rs  provider.rs  redb.rs
src/provider/db/: db_provider.rs  mod.rs  redb.rs
src/provider/qbit/: mod.rs  qbit.rs
src/task/: mod.rs  task.rs  tasker.rs
webfile/: 404.html  anime.html  anime.txt  config.html  config.txt  dashboard.html  dashboard.txt  index.html  index.txt  rss.html  rss.txt  rules.html  rules.txt
webfile/_next/static/DS2kurClGBpxJiUDVMXed/: _buildManifest.js
webfile/_next/static/chunks/: 0e5ce63c-f79cb8d8aa1b9298.js  115-8acc37ddbbef1614.js  291-82aea78f4806b31f.js  39-ccfbd00d71605641.js  446-19d053d99c8106d2.js  452-d2c8597d0d3d4c51.js  567-5bc3e0891132048b.js  597-d0ce33bc7d6c2242.js  681-0fcff88a7c1e12b2.js  718-bf5d93587280efd9.js  77-19cdb90c0b2a5810.js  773-feb08ed7eee50902.js  776-22e68c2c51cfbbc2.js  84fbfe7f-19bd805b339bbe5a.js  869-c5368f28b6b70d30.js  951-ce1d11df116c4b0e.js  976-a742e040bcae419c.js  main-63460ac915b1f887.js  main-app-16283f485321ae16.js  main-app-39245eb588d1d9a3.js  webpack-b29f8fffd90aef8d.js  webpack-c413bde3ddb1f6e6.js
webfile/_next/static/chunks/app/: layout-16dff5c8ed940b3b.js  layout-8a7f7858f4d32c20.js  page-a658e7f5b186a2d5.js  page-eace14c897c5a9c7.js
webfile/_next/static/chunks/app/(overview)/: layout-53ae1e39199f3747.js  layout-e48b65a9de4c1a66.js
webfile/_next/static/chunks/app/(overview)/anime/: page-59f9a83fcd2ed30b.js  page-97a277cea517ff4d.js  page-afa18d2c2aad3cb4.js
webfile/_next/static/chunks/app/(overview)/config/: page-1a3e2e7ba07d2325.js  page-b09aaef6852d35f3.js
webfile/_next/static/chunks/app/(overview)/dashboard/: page-3432879448a7059b.js  page-5c8f60b9be8ed983.js
webfile/_next/static/chunks/app/(overview)/rss/: page-4681463ab5d3c985.js  page-4a8ea8af82032a1c.js
webfile/_next/static/chunks/app/(overview)/rules/: page-41676516d650ce45.js  page-fa84a6d72436d29f.js
webfile/_next/static/chunks/app/auth/: layout-3ba9e8fba61437fb.js  layout-fd1421544c3a4f94.js
webfile/_next/static/chunks/app/auth/login/: page-417577946fbf46af.js  page-6c8cae3a7e665562.js
webfile/_next/static/chunks/app/auth/register/: page-36bb7cdaf127cb1b.js  page-5dc6bcf336dc4429.js
webfile/_next/static/css/: 2754c69e7263db99.css  977a05f12c892779.css
webfile/auth/: login.html  login.txt  register.html  register.txt
