[package]
name = "yanami"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive", "env"] }
dotenv = "0.15.0"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
once_cell = "1.19.0"
redb = "2.1.1"
reqwest = { version = "0.12.5", features = ["cookies", "json", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"
