[package]
name = "anna"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json", "cookies", "multipart"] }
rss = "2.0.8"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
