[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
anna = { path = "../anna" }
entity = { path = "../orm/entity" }
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
base32 = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive", "env"] }
dotenv = "0.15.0"
formatx = "0.2.2"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
mimalloc = "0.1.43"
mime_guess = "2.0.5"
once_cell = "1.19.0"
redb = "2.1.1"
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "macos-system-configuration", "cookies", "json", "multipart", "rustls-tls"] }
rust-embed = { version = "8.5.0", features = ["axum"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
serde_json = "1.0.122"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum", "reqwest"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = "0.18.1"
